--- a/LaLiga.html
+++ b/LaLiga.html
@@ -152,17 +152,17 @@
             <h3>Atlético de Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Atletico de Madrid/HOME.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/AtleticodeMadrid/HOME.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Atletico de Madrid/AWAY.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/AtleticodeMadrid/AWAY.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Atletico de Madrid/THIRD.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/AtleticodeMadrid/THIRD.jpg" alt="Camiseta Atlético de Madrid"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -174,17 +174,17 @@
             <h3>FC Barcelona</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/FC Barcelona/HOME.jpg" alt="Camiseta FC Barcelona"class="zoomable">
+                    <img src="Imagenes/LALIGA/FCBarcelona/HOME.jpg" alt="Camiseta FC Barcelona"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/FC Barcelona/AWAY.jpg" alt="Camiseta FC Barcelona"class="zoomable">
+                    <img src="Imagenes/LALIGA/FCBarcelona/AWAY.jpg" alt="Camiseta FC Barcelona"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/FC Barcelona/THIRD.jpg" alt="Camiseta FC Barcelona"class="zoomable">
+                    <img src="Imagenes/LALIGA/FCBarcelona/THIRD.jpg" alt="Camiseta FC Barcelona"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -264,12 +264,12 @@
             <h3>U.D. Las Palmas</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Las Palmas/HOME.jpg" alt="Camiseta U.D. Las Palmas"class="zoomable">
+                    <img src="Imagenes/LALIGA/LasPalmas/HOME.jpg" alt="Camiseta U.D. Las Palmas"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Las Palmas/AWAY.jpg.png" alt="Camiseta U.D. Las Palmas"class="zoomable">
+                    <img src="Imagenes/LALIGA/LasPalmas/AWAY.jpg.png" alt="Camiseta U.D. Las Palmas"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -332,12 +332,12 @@
             <h3>Rayo Vallecano</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Rayo Vallecano/HOME.jpg" alt="Camiseta Rayo Vallecano"class="zoomable">
+                    <img src="Imagenes/LALIGA/RayoVallecano/HOME.jpg" alt="Camiseta Rayo Vallecano"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Rayo Vallecano/AWAY.jpg" alt="Camiseta Rayo Vallecano"class="zoomable">
+                    <img src="Imagenes/LALIGA/RayoVallecano/AWAY.jpg" alt="Camiseta Rayo Vallecano"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -349,17 +349,17 @@
             <h3>Real Betis</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Betis /HOME.jpg" alt="Camiseta Real Betis"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealBetis/HOME.jpg" alt="Camiseta Real Betis"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Betis /AWAY.jpg" alt="Camiseta Real Betis"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealBetis/AWAY.jpg" alt="Camiseta Real Betis"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Betis /THIRD.jpg" alt="Camiseta Real Betis"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealBetis/THIRD.jpg" alt="Camiseta Real Betis"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>23€</p>
                 </div>
@@ -371,17 +371,17 @@
             <h3>Real Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Madrid/HOME.jpg.webp" alt="Camiseta Real Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealMadrid/HOME.jpg.webp" alt="Camiseta Real Madrid"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Madrid/AWAY.jpg" alt="Camiseta Real Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealMadrid/AWAY.jpg" alt="Camiseta Real Madrid"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Madrid/THIRD.jpg" alt="Camiseta Real Madrid"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealMadrid/THIRD.jpg" alt="Camiseta Real Madrid"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -393,12 +393,12 @@
             <h3>Real Sociedad</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Sociedad/HOME.jpg.avif" alt="Camiseta Real Sociedad"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealSociedad/HOME.jpg.avif" alt="Camiseta Real Sociedad"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Sociedad/AWAY.jpg" alt="Camiseta Real Sociedad"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealSociedad/AWAY.jpg" alt="Camiseta Real Sociedad"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -410,12 +410,12 @@
             <h3>Real Valladolid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Valladolid/HOME.jpg.webp" alt="Camiseta Real Valladolid"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealValladolid/HOME.jpg.webp" alt="Camiseta Real Valladolid"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LALIGA/Real Valladolid/AWAY.jpg" alt="Camiseta Real Valladolid"class="zoomable">
+                    <img src="Imagenes/LALIGA/RealValladolid/AWAY.jpg" alt="Camiseta Real Valladolid"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
