--- a/Ligue_1.html
+++ b/Ligue_1.html
@@ -94,12 +94,12 @@
             <h3>Lille</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LILLE/HOME.jpeg" alt="Camiseta Lille"class="zoomable">
+                    <img src="Imagenes/LIGUE1/LILLE/HOME.jpeg" alt="Camiseta Lille"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LILLE/AWAY.jpg" alt="Camiseta Lille"class="zoomable">
+                    <img src="Imagenes/LIGUE1/LILLE/AWAY.jpg" alt="Camiseta Lille"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -111,12 +111,12 @@
             <h3>Olympique de Lyon</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LYON/HOME (10).jpg" alt="Camiseta Lyon"class="zoomable">
+                    <img src="Imagenes/LIGUE1/LYON/HOME (10).jpg" alt="Camiseta Lyon"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LYON/AWAY.jpg" alt="Camiseta Lyon"class="zoomable">
+                    <img src="Imagenes/LIGUE1/LYON/AWAY.jpg" alt="Camiseta Lyon"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -128,12 +128,12 @@
             <h3>Olympique de Marsella</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MARSELLA/HOME.jpg" alt="Camiseta Marsella"class="zoomable">
+                    <img src="Imagenes/LIGUE1/MARSELLA/HOME.jpg" alt="Camiseta Marsella"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MARSELLA/AWAY.jpg" alt="Camiseta Marsella"class="zoomable">
+                    <img src="Imagenes/LIGUE1/MARSELLA/AWAY.jpg" alt="Camiseta Marsella"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -145,12 +145,12 @@
             <h3>AS Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MONACO/HOME.jpg" alt="Camiseta Mónaco"class="zoomable">
+                    <img src="Imagenes/LIGUE1/MONACO/HOME.jpg" alt="Camiseta Mónaco"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MONACO/AWAY.jpg" alt="Camiseta Mónaco"class="zoomable">
+                    <img src="Imagenes/LIGUE1/MONACO/AWAY.jpg" alt="Camiseta Mónaco"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -162,17 +162,17 @@
             <h3>Paris Saint-Germain (PSG)</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/HOME.jpeg" alt="Camiseta PSG"class="zoomable">
+                    <img src="Imagenes/LIGUE1/PSG/HOME.jpeg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/AWAY.jpg" alt="Camiseta PSG"class="zoomable">
+                    <img src="Imagenes/LIGUE1/PSG/AWAY.jpg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/THIRD (13).jpg" alt="Camiseta PSG"class="zoomable">
+                    <img src="Imagenes/LIGUE1/PSG/THIRD (13).jpg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
