--- a/RetroLaLiga.html
+++ b/RetroLaLiga.html
@@ -98,12 +98,12 @@
             <h3>Athletic Club</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/HOME 95-97.jpg" alt="Athletic Club Local 95-97"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATHLETICCLUB/HOME 95-97.jpg" alt="Athletic Club Local 95-97"class="zoomable">
                     <h4>Camiseta Local 95-96</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/AWAY 2011-12.jpg" alt="Camiseta Athletic Club Visitante"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATHLETICCLUB/AWAY 2011-12.jpg" alt="Camiseta Athletic Club Visitante"class="zoomable">
                     <h4>Camiseta Visitante 11-12</h4>
                     <p>25€</p>
                 </div>
@@ -115,22 +115,22 @@
             <h3>Atlético de Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATLETICODEMADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
                     <h4>Camiseta Local 94-95</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATLETICODEMADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
                     <h4>Camiseta Away 98-99</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATLETICODEMADRID/HOME 2004-05.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 04-05</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/ATLETICODEMADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante"class="zoomable">
                     <h4>Camiseta Local 14-15</h4>
                     <p>25€</p>
                 </div>
@@ -142,7 +142,7 @@
             <h3>Deportivo de la Coruña</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/DEPORTIVO DE LA CORUNA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/DEPORTIVODELACORUNA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 99-00</h4>
                     <p>25€</p>
                 </div>
@@ -154,42 +154,42 @@
             <h3>FC Barcelona</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 96-97.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/HOME 96-97.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 96-97</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 06-07</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 13-14</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/HOME 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 16-17</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/THIRD 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/THIRD 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 16-17</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/FCBARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 21-22</h4>
                     <p>25€</p>
                 </div>
@@ -201,12 +201,12 @@
             <h3>Málaga</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/MALAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/MALAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta 120 ANIVERSARIO</h4>
                     <p>25€</p>
                 </div>
@@ -218,47 +218,47 @@
             <h3>Real Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2000.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2000.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 2000</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2003-04.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2003-04.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 03-04</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 06-07</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2007-08.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2007-08.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 07-08</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2011-12.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2011-12.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 11-12</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 13-14</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/THIRD 2014-15.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/THIRD 2014-15.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Alternativa 14-15</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/AWAY 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALMADRID/AWAY 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 16-17</h4>
                     <p>25€</p>
                 </div>
@@ -270,7 +270,7 @@
             <h3>Real Oviedo</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL OVIEDO/HOME 90-91.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/REALOVIEDO/HOME 90-91.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 90-91</h4>
                     <p>25€</p>
                 </div>
@@ -282,12 +282,12 @@
             <h3>Sevilla </h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 88-89.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/SEVILLA/HOME 88-89.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 88-89</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 93-94.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/SEVILLA/HOME 93-94.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 93-94</h4>
                     <p>25€</p>
                 </div>
@@ -299,12 +299,12 @@
             <h3>Valencia CF</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/VALENCIA/HOME 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 99-00</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
+                    <img src="Imagenes/RETRO/LALIGA/VALENCIA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 06-07</h4>
                     <p>25€</p>
                 </div>
