--- a/RetroLigue1.html
+++ b/RetroLigue1.html
@@ -92,12 +92,12 @@
             <h3>Marsella</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 90-91.jpeg" alt="Marsella Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/LIGUE1/MARSELLA/HOME 90-91.jpeg" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 90-91</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 98-99.jpeg" alt="Marsella Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/LIGUE1/MARSELLA/HOME 98-99.jpeg" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 98-99</h4>
                     <p>25€</p>
                 </div>
@@ -109,7 +109,7 @@
             <h3>Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/LIGUE1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 16-17</h4>
                     <p>25€</p>
                 </div>
@@ -121,12 +121,12 @@
             <h3>PSG</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2001-02.jpeg" alt="PSG Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/LIGUE1/PSG/HOME 2001-02.jpeg" alt="PSG Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2017-18.jpg" alt="Camiseta PSG Alternativa"class="zoomable">
+                    <img src="Imagenes/RETRO/LIGUE1/PSG/HOME 2017-18.jpg" alt="Camiseta PSG Alternativa"class="zoomable">
                     <h4>Camiseta Local 17-18</h4>
                     <p>25€</p>
                 </div>
