--- a/RetroSerieA.html
+++ b/RetroSerieA.html
@@ -95,17 +95,17 @@
     <h3>Fiorentina</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 92-93.jpg" alt="Fiorentina Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/FIORENTINA/HOME 92-93.jpg" alt="Fiorentina Local 95-96"class="zoomable">
             <h4>Camiseta Local 92-93</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 98-99.jpg" alt="Camiseta Fiorentina Visitante"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/FIORENTINA/HOME 98-99.jpg" alt="Camiseta Fiorentina Visitante"class="zoomable">
             <h4>Camiseta Local 98-99</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 99-00.jpg" alt="Camiseta Fiorentina Alternativa"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/FIORENTINA/HOME 99-00.jpg" alt="Camiseta Fiorentina Alternativa"class="zoomable">
             <h4>Camiseta Local 99-00</h4>
             <p>25€</p>
         </div>
@@ -117,17 +117,17 @@
     <h3>Inter Milan</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/HOME 97-98.jpg" alt="Inter Milan Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/INTERMILAN/HOME 97-98.jpg" alt="Inter Milan Local 95-96"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/THIRD 97-98.jpg" alt="Camiseta Inter Milan Visitante"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/INTERMILAN/THIRD 97-98.jpg" alt="Camiseta Inter Milan Visitante"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/AWAY 2010-11.jpg" alt="Camiseta Inter Milan Alternativa"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/INTERMILAN/AWAY 2010-11.jpg" alt="Camiseta Inter Milan Alternativa"class="zoomable">
             <h4>Camiseta Away 10-11</h4>
             <p>25€</p>
         </div>
@@ -139,22 +139,22 @@
     <h3>Juventus</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 97-98.jpg" alt="Juventus Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/JUVENTUS/AWAY 97-98.jpg" alt="Juventus Local 95-96"class="zoomable">
             <h4>Camiseta Away 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 97-98.jpg" alt="Camiseta Juventus Visitante"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/JUVENTUS/HOME 97-98.jpg" alt="Camiseta Juventus Visitante"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 2014-15.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/JUVENTUS/HOME 2014-15.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
             <h4>Camiseta Local 14-15</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 2015-16.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/JUVENTUS/AWAY 2015-16.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
             <h4>Camiseta Away 15-16</h4>
             <p>25€</p>
         </div>
@@ -166,12 +166,12 @@
     <h3>Milan</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/MILAN/HOME 2006-07.jpg" alt="Milan Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/MILAN/HOME 2006-07.jpg" alt="Milan Local 95-96"class="zoomable">
             <h4>Camiseta Local 06-07</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/MILAN/AWAY FINAL 2006-07.jpg" alt="Camiseta Milan Visitante"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/MILAN/AWAY FINAL 2006-07.jpg" alt="Camiseta Milan Visitante"class="zoomable">
             <h4>Camiseta Away Final 06-07</h4>
             <p>25€</p>
         </div>
@@ -183,7 +183,7 @@
     <h3>Napoli</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/NAPOLI/HOME 87-88.jpeg" alt="Napoli Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/NAPOLI/HOME 87-88.jpeg" alt="Napoli Local 95-96"class="zoomable">
             <h4>Camiseta Local 87-88</h4>
             <p>25€</p>
         </div>
@@ -195,7 +195,7 @@
     <h3>Roma</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/ROMA/HOME 98-99.jpeg" alt="Roma Local 95-96"class="zoomable">
+            <img src="Imagenes/RETRO/SERIEA/ROMA/HOME 98-99.jpeg" alt="Roma Local 95-96"class="zoomable">
             <h4>Camiseta Local 98-99</h4>
             <p>25€</p>
         </div>
