--- a/Serie_A.html
+++ b/Serie_A.html
@@ -98,12 +98,12 @@
         <h3>Atalanta</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/ATALANTA/HOME.jpg" alt="Camiseta Atalanta"class="zoomable">
+                <img src="Imagenes/SERIEA/ATALANTA/HOME.jpg" alt="Camiseta Atalanta"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ATALANTA/AWAY.jpg" alt="Camiseta Atalanta"class="zoomable">
+                <img src="Imagenes/SERIEA/ATALANTA/AWAY.jpg" alt="Camiseta Atalanta"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -115,12 +115,12 @@
         <h3>Como</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/COMO/HOME.jpg" alt="Camiseta Como"class="zoomable">
+                <img src="Imagenes/SERIEA/COMO/HOME.jpg" alt="Camiseta Como"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/COMO/AWAY (13).jpg" alt="Camiseta Como"class="zoomable">
+                <img src="Imagenes/SERIEA/COMO/AWAY (13).jpg" alt="Camiseta Como"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -132,17 +132,17 @@
         <h3>Inter</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/HOME.jpg" alt="Camiseta Inter"class="zoomable">
+                <img src="Imagenes/SERIEA/INTERMILAN/HOME.jpg" alt="Camiseta Inter"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/AWAY (11).jpg" alt="Camiseta Inter 2"class="zoomable">
+                <img src="Imagenes/SERIEA/INTERMILAN/AWAY (11).jpg" alt="Camiseta Inter 2"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/THIRD (8).jpg" alt="Camiseta Inter"class="zoomable">
+                <img src="Imagenes/SERIEA/INTERMILAN/THIRD (8).jpg" alt="Camiseta Inter"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -154,17 +154,17 @@
         <h3>Juventus de Turín</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/HOME (8).jpg" alt="Camiseta Juve"class="zoomable">
+                <img src="Imagenes/SERIEA/JUVENTUS/HOME (8).jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/AWAY.jpg" alt="Camiseta Juve"class="zoomable">
+                <img src="Imagenes/SERIEA/JUVENTUS/AWAY.jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Camiseta Juve"class="zoomable">
+                <img src="Imagenes/SERIEA/JUVENTUS/THIRD (7).jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -176,12 +176,12 @@
         <h3>Lazio</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/LAZIO/HOME.jpg" alt="Camiseta Lazio"class="zoomable">
+                <img src="Imagenes/SERIEA/LAZIO/HOME.jpg" alt="Camiseta Lazio"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/LAZIO/AWAY.jpg" alt="Camiseta Lazio"class="zoomable">
+                <img src="Imagenes/SERIEA/LAZIO/AWAY.jpg" alt="Camiseta Lazio"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -193,17 +193,17 @@
         <h3>Milan</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/HOME (9).jpg" alt="Camiseta Milan"class="zoomable">
+                <img src="Imagenes/SERIEA/MILAN/HOME (9).jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/AWAY (10).jpg" alt="Camiseta Milan"class="zoomable">
+                <img src="Imagenes/SERIEA/MILAN/AWAY (10).jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/THIRD.jpg" alt="Camiseta Milan"class="zoomable">
+                <img src="Imagenes/SERIEA/MILAN/THIRD.jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -215,17 +215,17 @@
         <h3>Napoli</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/HOME.jpg" alt="Camiseta Napoli"class="zoomable">
+                <img src="Imagenes/SERIEA/NAPOLI/HOME.jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/AWAY (12).jpg" alt="Camiseta Napoli"class="zoomable">
+                <img src="Imagenes/SERIEA/NAPOLI/AWAY (12).jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/THIRD.jpg" alt="Camiseta Napoli"class="zoomable">
+                <img src="Imagenes/SERIEA/NAPOLI/THIRD.jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -237,17 +237,17 @@
         <h3>Roma</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/HOME.jpg" alt="Camiseta Roma"class="zoomable">
+                <img src="Imagenes/SERIEA/ROMA/HOME.jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/AWAY (14).jpg" alt="Camiseta Roma"class="zoomable">
+                <img src="Imagenes/SERIEA/ROMA/AWAY (14).jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/THIRD (9).jpg" alt="Camiseta Roma"class="zoomable">
+                <img src="Imagenes/SERIEA/ROMA/THIRD (9).jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -259,7 +259,7 @@
         <h3>Venezia</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/VENEZIA/HOME.jpg" alt="Camiseta Venezia"class="zoomable">
+                <img src="Imagenes/SERIEA/VENEZIA/HOME.jpg" alt="Camiseta Venezia"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
