--- a/MLS.html
+++ b/MLS.html
@@ -93,17 +93,17 @@
             <h3>Inter Miami</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/HOME.jpeg" alt="Camiseta Inter Miami"class="zoomable">
+                    <img src="Imagenes/MLS/INTERMIAMI/HOME.jpeg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/AWAY.jpg" alt="Camiseta Inter Miami"class="zoomable">
+                    <img src="Imagenes/MLS/INTERMIAMI/AWAY.jpg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/THIRD-3.jpg" alt="Camiseta Inter Miami"class="zoomable">
+                    <img src="Imagenes/MLS/INTERMIAMI/THIRD-3.jpg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -115,7 +115,7 @@
             <h3>Los Ángeles FC</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/LOS ANGELES FC/THIRD.jpg" alt="Camiseta Los Ángeles FC"class="zoomable">
+                    <img src="Imagenes/MLS/LOSANGELESFC/THIRD.jpg" alt="Camiseta Los Ángeles FC"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -127,7 +127,7 @@
             <h3>Los Ángeles Galaxy</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/LOS ANGELES GALAXY/HOME.jpg" alt="Camiseta Los Ángeles Galaxy"class="zoomable">
+                    <img src="Imagenes/MLS/LOSANGELESGALAXY/HOME.jpg" alt="Camiseta Los Ángeles Galaxy"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
