--- a/RetroBundesliga.html
+++ b/RetroBundesliga.html
@@ -91,17 +91,17 @@
             <h3>Bayern Munich</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 95-96.jpg" alt="Bayern Munich Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERNMUNICH/HOME 95-96.jpg" alt="Bayern Munich Local 95-96"class="zoomable">
                     <h4>Camiseta Local 95-96</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 97-99.jpg" alt="Camiseta Bayern Munich Visitante"class="zoomable">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERNMUNICH/HOME 97-99.jpg" alt="Camiseta Bayern Munich Visitante"class="zoomable">
                     <h4>Camiseta Local 97-99</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME FINAL 2013-14.jpg" alt="Camiseta Bayern Munich Alternativa"class="zoomable">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERNMUNICH/HOME FINAL 2013-14.jpg" alt="Camiseta Bayern Munich Alternativa"class="zoomable">
                     <h4>Camiseta Local Final 13-14</h4>
                     <p>25€</p>
                 </div>
@@ -113,12 +113,12 @@
             <h3>Borussia Dortmund</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/HOME 2012-13.jpg" alt="Camiseta Borussia Dortmund Local"class="zoomable">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIADORTMUND/HOME 2012-13.jpg" alt="Camiseta Borussia Dortmund Local"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/AWAY 96-97.jpg" alt="Camiseta Borussia Dortmund Visitante"class="zoomable">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIADORTMUND/AWAY 96-97.jpg" alt="Camiseta Borussia Dortmund Visitante"class="zoomable">
                     <h4>Camiseta Visitante 96-97</h4>
                     <p>25€</p>
                 </div>
