--- a/RetroOtrasLigas.html
+++ b/RetroOtrasLigas.html
@@ -92,17 +92,17 @@
             <h3>Boca Juniors</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001.jpeg" alt="Boca Juniors Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/OTRASLIGAS/BOCAJUNIORS/HOME 2001.jpeg" alt="Boca Juniors Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001-02.jpeg" alt="Camiseta Boca Juniors Visitante"class="zoomable">
+                    <img src="Imagenes/RETRO/OTRASLIGAS/BOCAJUNIORS/HOME 2001-02.jpeg" alt="Camiseta Boca Juniors Visitante"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/AWAY 2002.jpg" alt="Camiseta Boca Juniors Alternativa"class="zoomable">
+                    <img src="Imagenes/RETRO/OTRASLIGAS/BOCAJUNIORS/AWAY 2002.jpg" alt="Camiseta Boca Juniors Alternativa"class="zoomable">
                     <h4>Camiseta Local 02</h4>
                     <p>25€</p>
                 </div>
@@ -114,7 +114,7 @@
             <h3>S.Lisboa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/S.LISBOA/HOME 2001-03.jpeg" alt="S.Lisboa Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/OTRASLIGAS/S.LISBOA/HOME 2001-03.jpeg" alt="S.Lisboa Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
@@ -126,7 +126,7 @@
             <h3>Santos</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Santos Local 95-96"class="zoomable">
+                    <img src="Imagenes/RETRO/OTRASLIGAS/SANTOS/HOME 2011-2012.jpg" alt="Santos Local 95-96"class="zoomable">
                     <h4>Camiseta Local 11-12</h4>
                     <p>25€</p>
                 </div>
