--- a/primeiraLiga.html
+++ b/primeiraLiga.html
@@ -93,17 +93,17 @@
             <h3>Benfica</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/HOME (18).jpg" alt="Camiseta Benfica"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/BENFICA/HOME (18).jpg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/AWAY.jpeg" alt="Camiseta Benfica"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/BENFICA/AWAY.jpeg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/THIRD (17).jpg" alt="Camiseta Benfica"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/BENFICA/THIRD (17).jpg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -115,17 +115,17 @@
             <h3>Oporto</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/HOME.jpg" alt="Camiseta Oporto"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/OPORTO/HOME.jpg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/AWAY.jpeg" alt="Camiseta Oporto"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/OPORTO/AWAY.jpeg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/THIRD.jpeg" alt="Camiseta Oporto"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/OPORTO/THIRD.jpeg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -137,12 +137,12 @@
             <h3>Sporting de Lisboa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/HOME.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/S.LISBOA/HOME.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/AWAY.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
+                    <img src="Imagenes/PRIMEIRALIGA/S.LISBOA/AWAY.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
